# s0s

./: CMakeLists.txt  README.md  TODO.md
examples/euler/: CMakeLists.txt  func.h  main.cpp
examples/runge_kutta_fehlberg/: main.cpp
examples/solve/: func.h  main.cpp
include/s0s/: euler.h  gradient_descent.h  newton_raphson.h  parallel.h  runge_kutta_fehlberg.h  solve.h
